--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Title set in .yml file
 description: Slate is a theme for GitHub Pages. from .yml file
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-slate
